# media-timeline

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.toml
.cargo/: config.toml
.github/workflows/: build.yml  cross-compile.yml
migrations/: V1__initial.sql  V2__engagements.sql
src/: container.rs  create_app.rs  lib.rs  main.rs  mastodon.rs  settings.rs  storage.rs  templating.rs
src/api/controllers/: hashtags.rs  mod.rs  timeline.rs
src/api/dto/: hashtag.rs
src/domain/models/: hashtag.rs
src/domain/repositories/: hashtag.rs  mod.rs  status.rs
src/domain/services/: hashtag.rs  status.rs
src/infrastructure/: error.rs  mod.rs
src/infrastructure/database/: sqlite.rs
src/infrastructure/repositories/: hashtag.rs  status.rs
src/infrastructure/services/: mastodon.rs  mod.rs  templating.rs
src/services/: hashtag.rs  hashtags.rs  status.rs  timeline.rs
src/services/testdata/: status_current.json  status_pre_migration.json
src/settings/: duration.rs  mod.rs
src/storage/: sqlite.rs  traits.rs
src/workers/: mod.rs  statuses.rs  timeline.rs  tracker.rs
static/: index.css  index.html  index.js  mobile.css  style.css  timeline.css
templates/: timeline.html
templates/hashtags/: list.html  list_popular.html
