[package]
name = "media-timeline"
version = "0.1.0"
edition = "2024"
description = "Media timeline for the fediverse"
readme = "README.md"
repository = "https://github.com/MiLk/media-timeline"
license = "MIT"
publish = false

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
actix-settings = "0.8.0"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
megalodon = { version = "1.0.3" }
serde = { version = "1.0", features = ["derive"] }
tera = { version = "1", default-features = true }
serde_json = "1.0"
tokio = "1.45"
rusqlite = { version = "0.35", features = ["bundled", "chrono"] }
r2d2_sqlite = "0.28"
r2d2 = "0.8"
async-trait = "0.1.88"
tokio-util = { version = "0.7.15", features = ["rt"] }
regex = "1.11.1"
once_cell = "1.21.3"
refinery = { git = "https://github.com/rust-db/refinery.git", rev = "3fa178fc2da8d29a897886b95d05435302811f6c", features = ["rusqlite"]}
thiserror = "2.0.12"
