[package]
name = "media-timeline"
version = "0.1.0"
edition = "2024"
description = "Media timeline for the fediverse"
readme = "README.md"
repository = "https://github.com/MiLk/media-timeline"
license = "MIT"
publish = false

[dependencies]
actix-files = "0.6.10"
actix-web = "4"
actix-settings = "0.9.0"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
megalodon = { version = "1.0.3" }
serde = { version = "1.0", features = ["derive"] }
tera = { version = "1", default-features = true }
serde_json = "1.0"
tokio = "1.48"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
r2d2_sqlite = "0.31"
r2d2 = "0.8"
async-trait = "0.1.89"
tokio-util = { version = "0.7.16", features = ["rt"] }
regex = "1.12.2"
once_cell = "1.21.3"
refinery = { version = "0.9.0", features = ["rusqlite"]}
thiserror = "2.0.17"
